2006-12-15  Tero Koskinen  <tero.koskinen@iki.fi>

	* work_migration.cc (get_ws_format): Fail cleanly when _MTN/format
	is broken.
	* tests/fail_cleanly_when__MTN_format_empty: Test.

2006-12-13  Thomas Moschny  <thomas.moschny@gmx.de>

	* options.cc (name): Call localize_monotone() before fetching an
	option's description, to make sure that it is translated properly.

2006-12-13  Markus Schiltknecht  <markus@bluegap.ch>

	Made a lua tester function more bullet proof.

	* tester.lua (samelines): do not throw a format error if
	the file ends before expected.

2006-12-12  Ben Walton  <bdwalton@gmail.com>
 
        * cmd_ws_cc: Added mtn mkdir
        * testsuite.lua: added mtn mkdir test
        * included tests/mkdir as unit testing for mtn mkdir
        * added documentation to monotone.texi

2006-12-12  Thomas Moschny  <thomas.moschny@gmx.de>

	* HACKING: Updated "Patch submission guidelines" section.

2006-12-11  Ben Walton  <bdwalton@gmail.com>
 
        * cmd_ws_commit.cc,
        tests/commit_using__MTN_log/commit_log_modified_return.lua,
        tests/commit_using__MTN_log/__driver__.lua:
        Added the requirement that when _MTN/log is pre-specified by
        the user, that the user remove a 'magic' line prior to the
        commit being accepted.  Modified the units tests to verify this.
        Updated texinfo to match this new behaviour.

2006-12-10  Timothy Brownawell <tbrownaw@gmail.com>

	Implement a "mtn log --to <revision>", that doesn't log the
	revisions that would be logged when <revision> was given as
	the starting revision.

2006-12-09  Richard Levitte  <richard@levitte.org>

	* tests/netsync_permissions_wildcards/__driver__.lua:
	Don't forget to get() read-permissions and write-permissions.
	Also, netsync.start should use the full blown netsync.lua,
	not the minimal start.

2006-12-09  Richard Levitte  <richard@levitte.org>

	* tests/netsync_permissions_wildcards/__driver__.lua,
	tests/netsync_permissions_wildcards/read-permissions,