@@ -695,5 +695,5 @@ table.insert(tests, "import")
 table.insert(tests, "netsync_permissions_wildcards")
 table.insert(tests, "log_--to")
 table.insert(tests, "mkdir")
-table.insert(tests, "fail_cleanly_when__MTN_format_empty")
+table.insert(tests, "fail_cleanly_when__MTN_format_corrupt")
 
